NetBSD Problem Report #51409

From dholland@macaran.eecs.harvard.edu  Fri Aug 12 00:08:16 2016
Return-Path: <dholland@macaran.eecs.harvard.edu>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id A895A7A281
	for <gnats-bugs@gnats.NetBSD.org>; Fri, 12 Aug 2016 00:08:16 +0000 (UTC)
Message-Id: <20160812000712.246D56E26F@macaran.eecs.harvard.edu>
Date: Thu, 11 Aug 2016 20:07:11 -0400 (EDT)
From: dholland@eecs.harvard.edu
Reply-To: dholland@netbsd.org
To: gnats-bugs@NetBSD.org
Subject: dumplfs cores
X-Send-Pr-Version: 3.95

>Number:         51409
>Category:       bin
>Synopsis:       dumplfs cores
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Aug 12 00:10:00 +0000 2016
>Closed-Date:    Fri Aug 12 08:26:29 +0000 2016
>Last-Modified:  Fri Aug 12 08:26:29 +0000 2016
>Originator:     David A. Holland
>Release:        NetBSD 7.99.30
>Organization:
>Environment:
System: NetBSD macaran 7.99.30 NetBSD 7.99.30 (MACARAN) #39: Tue Jun 7 15:26:15 EDT 2016 dholland@macaran:/usr/src/sys/arch/amd64/compile/MACARAN amd64
Architecture: x86_64
Machine: amd64
>Description:

>How-To-Repeat:

	% dumplfs /dev/zero
	   :
	Segmentation fault
	% 

>Fix:

>Release-Note:

>Audit-Trail:
From: "David A. Holland" <dholland@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/51409 CVS commit: src/usr.sbin/dumplfs
Date: Fri, 12 Aug 2016 08:22:13 +0000

 Module Name:	src
 Committed By:	dholland
 Date:		Fri Aug 12 08:22:13 UTC 2016

 Modified Files:
 	src/usr.sbin/dumplfs: dumplfs.c

 Log Message:
 If the number of inodes per block is zero, bail instead of using
 uninitialized stack trash as a dinode pointer. Fixes PR 51409 where
 "dumplfs /dev/zero" receives SIGSEGV.


 To generate a diff of this commit:
 cvs rdiff -u -r1.62 -r1.63 src/usr.sbin/dumplfs/dumplfs.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Fri, 12 Aug 2016 08:26:29 +0000
State-Changed-Why:
fixed


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.