If the number of inodes per block is zero, bail instead of using uninitialized stack trash as a dinode pointer. Fixes PR 51409 where "dumplfs /dev/zero" receives SIGSEGV.